Fix Icon alignment 1099 page; Fix issue with prefix misaligning values; Fix vertical spacing issue with Grid siblings; Readd strong tag to some labels; Apply Grid to dynamic fields

--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,7 @@ body {
   background-color: whitesmoke;
   height: 100vh;
 }
+
+.MuiGrid-container ~ .MuiGrid-container {
+  margin-top: 8px;
+}
